# Suriel

./: .env.example  .gitignore  README-es.md  README.md  main.py  pyproject.toml
configs/: __init__.py  constants.py  directories.py
data/: __init__.py
data/market/: crypto.py
definitions/: __init__.py  crypto.py  stocks.py
logs/tensorboard/PPO_1/: events.out.tfevents.1780765018.DESKTOP-6SU8UHN.19596.0
logs/tensorboard/PPO_2/: events.out.tfevents.1780771601.DESKTOP-6SU8UHN.12448.0  events.out.tfevents.1780771722.DESKTOP-6SU8UHN.11948.0
scripts/: train.py
src/env/: factory.py
src/features/: __init__.py  indicators.py
src/test/: agent.py  env.py
src/training/: __init__.py  evaluation.py  train.py
src/utils/: __init__.py  progressBar.py  toString.py
src/utils/apis/: __init__.py
src/utils/apis/data/: __init__.py  crypto.py
src/utils/apis/exchanges/: __init__.py
src/utils/definitions/: BNN.py  __init__.py
tensorboard_log/PPO_1/: events.out.tfevents.1780770213.DESKTOP-6SU8UHN.2700.0
